# godcaster

./: .env  .gitignore  README.md  main.py  pyproject.toml
captions/: WhisperX.py  WhisperXRunner.py  __init__.py
data/: main.py
data/captions/: module.py  transcript.json  transcript.txt
data/frames/: module.py
rockfish/: delete_intermediary.sh  frames.sh  merge_videos.sh
scraping/: get_vod_links.py
src/: main.py
src/captions/: LoggingSubprocess.py  WhisperX.py  WhisperXRunner.py  distributed_load.pkl  invalid_directories.txt  load_distributor.py  main.py  test.py  test_thread.py  test_thread_og.py
src/diffusion/: config.py  dataset.py  denoiser.py  image.py  text_transformer_temp.py  tokenizer_{0}.json  trainer.py
src/diffusion/tutorial/: .gitignore  config.py  dataset.py  model.py  trainer.py  tutorial.sh
src/eval/: metric.py  rouge.py
src/frames/: frames.py  load_balancer.py  load_distributor.py  main.py  module.py
src/model/: config,py  godcaster.py  godcaster_data.py  godcaster_encoder.py  godcaster_intermediate.py  godcaster_layer.py  godcaster_output.py  godcaster_self_attention.py
src/model/longformer_utils/: sliding_chunks.py
src/rockfish/: check_valid.sh  delete_intermediary.sh  frames.sh  merge_videos.sh  whisper.sh
src/scraping/: filter_final_video_links.py  get_videos.py  get_vod_info.py  split.py
src/trainer/: gaussian_diffusion.py  godcaster_trainer.py  losses.py  resample.py  respace.py  test_util.py  train.py
