[tool.poetry]
name = "godcaster"
version = "0.1.0"
description = ""
authors = ["klxu03 <beaver2025@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
yt-dlp = "^2024.3.10"
transformers = "^4.39.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
