[tool.poetry]
name = "godcaster"
version = "0.1.0"
description = ""
authors = ["klxu03 <beaver2025@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
yt-dlp = "^2024.3.10"
transformers = "^4.39.2"
whisperx = {git = "https://github.com/m-bain/whisperx.git"}
pandas = "^2.2.1"
torchaudio = "^2.2.2"
nltk = "^3.8.1"
faster-whisper = "^1.0.1"
setuptools = "^69.2.0"
pyannote-audio = "^3.1.1"
ffmpeg-python = "^0.2.0"
easyocr = "^1.7.1"
opencv-python = "^4.9.0.80"
moviepy = "^1.0.3"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
diffusers = "^0.27.2"
datasets = "^2.19.0"
accelerate = "^0.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
